--- a/src/app/features/mails/containers/mails/mails.component.html
+++ b/src/app/features/mails/containers/mails/mails.component.html
@@ -1,3 +1,33 @@
-<p>
-  mails works!
-</p>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-toggle>
+        <ion-button>
+          <ion-icon slot="icon-only" name="menu"></ion-icon>
+        </ion-button>
+      </ion-menu-toggle>
+    </ion-buttons>
+    <ion-title>Mails</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-list>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>Item</ion-label>
+      </ion-item>
+      <ion-item-options side="start">
+        <ion-item-option onClick="favorite(item)">Favorite</ion-item-option>
+        <ion-item-option color="danger" onClick="share(item)">Share</ion-item-option>
+        <ion-item-option color="success"><ion-icon name="star"></ion-icon></ion-item-option>
+      </ion-item-options>
+    
+      <ion-item-options side="end">
+        <ion-item-option onClick="unread(item)">Unread</ion-item-option>
+        <ion-item-option color="danger" onClick="share(item)">Share</ion-item-option>
+        <ion-item-option color="success"><ion-icon name="call"></ion-icon></ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
+</ion-content>
