--- a/src/app/features/mails/containers/mails/mails.component.html
+++ b/src/app/features/mails/containers/mails/mails.component.html
@@ -13,9 +13,16 @@
 
 <ion-content>
   <ion-list>
-    <ion-item-sliding>
+    <ion-item-sliding *ngFor="let post of posts$|async" (click)="goPost(post)">
       <ion-item>
-        <ion-label>Item</ion-label>
+        <ion-label>
+          <ion-text>
+            <h3>{{post?.title}}</h3>
+          </ion-text>
+          <ion-text>
+            <p>{{post?.body}}</p>
+          </ion-text>
+        </ion-label>
       </ion-item>
       <ion-item-options side="start">
         <ion-item-option onClick="favorite(item)">Favorite</ion-item-option>
