--- a/src/app/features/favorites/containers/favorites/favorites.component.html
+++ b/src/app/features/favorites/containers/favorites/favorites.component.html
@@ -1,3 +1,36 @@
-<p>
-  favorites works!
-</p>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-toggle>
+        <ion-button>
+          <ion-icon slot="icon-only" name="menu"></ion-icon>
+        </ion-button>
+      </ion-menu-toggle>
+    </ion-buttons>
+    <ion-title>Favorites</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-item>
+    <ion-thumbnail slot="start">
+      <img src="https://images.unsplash.com/photo-1484144709249-a643e3720d13?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=09a47f6cde9a3102a94b4e7d5b90b420&auto=format&fit=crop&w=1690&q=80">
+    </ion-thumbnail>
+    <ion-label>
+      <h2>H2 Title Text</h2>
+      <p>Button on right</p>
+    </ion-label>
+    <ion-button fill="outline" slot="end">View</ion-button>
+  </ion-item>
+
+  <ion-item>
+    <ion-thumbnail slot="start">
+      <img src="https://images.unsplash.com/photo-1501236570302-906143a7c9f8?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=560e0a540d582b6127db8b21b1363df2&auto=format&fit=crop&w=1567&q=80">
+    </ion-thumbnail>
+    <ion-label>
+      <h2>H2 Title Text</h2>
+      <p>Button on right</p>
+    </ion-label>
+    <ion-button fill="outline" slot="end">View</ion-button>
+  </ion-item>
+</ion-content>
