--- a/src/app/features/profile/containers/profile/profile.component.html
+++ b/src/app/features/profile/containers/profile/profile.component.html
@@ -1,3 +1,31 @@
-<p>
-  profile works!
-</p>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-toggle>
+        <ion-button>
+          <ion-icon slot="icon-only" name="menu"></ion-icon>
+        </ion-button>
+      </ion-menu-toggle>
+    </ion-buttons>
+    <ion-title>Profile</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  
+
+    <ion-list>
+      <ion-item>
+        <ion-label position="floating">Username</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Password</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+    </ion-list>
+    <p>
+      <ion-button expand="full" shape="round">Submit</ion-button>
+    </p>
+  
+</ion-content>
