cards home and categories commit

--- a/src/app/features/home/containers/home/home.component.html
+++ b/src/app/features/home/containers/home/home.component.html
@@ -33,8 +33,8 @@
     </ion-card-content>
   </ion-card> -->
 
-  <app-cards [title]="'Vélos'" [subtitle]="'equipment d\'été'" [image]="'https://images.unsplash.com/photo-1485965120184-e220f721d03e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=51a9aa4dd828bf5d50fcd8154dc405b8&auto=format&fit=crop&w=1500&q=80'" (click)="goCategory('bike')"></app-cards>
-  <app-cards [title]="'Skis'" [subtitle]="'equipment d\'hiver'" [image]="'https://images.unsplash.com/photo-1517057011470-8f36d636e6ca?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=9dcecd9ec3b07624dedb0df0c7b3eeee&auto=format&fit=crop&w=1594&q=80'" (click)="goCategory('ski')"></app-cards>
+  <app-cards [title]="'Vélos'" [subtitle]="'equipment d\'été'" [image]="'https://images.pexels.com/photos/255934/pexels-photo-255934.jpeg?cs=srgb&dl=asphalt-bicycle-bike-255934.jpg&fm=jpg'" (click)="goCategory('bike')"></app-cards>
+  <app-cards [title]="'Skis'" [subtitle]="'equipment d\'hiver'" [image]="'https://images.pexels.com/photos/257961/pexels-photo-257961.jpeg?cs=srgb&dl=active-activity-alps-257961.jpg&fm=jpg'" (click)="goCategory('ski')"></app-cards>
 
   <!-- second card -->
   <!-- <ion-card style="color: white;">
@@ -59,12 +59,12 @@
       
   <!-- fab placed to the (vertical) center and end -->
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button color="warning">
+    <ion-fab-button color="primary">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-    <ion-fab-button color="primary">
+    <ion-fab-button color="warning">
       <ion-icon name="map"></ion-icon>
     </ion-fab-button>
   </ion-fab>
