init map commit and modal

--- a/src/app/features/home/containers/home/home.component.html
+++ b/src/app/features/home/containers/home/home.component.html
@@ -64,7 +64,7 @@
     </ion-fab-button>
   </ion-fab>
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-    <ion-fab-button color="warning">
+    <ion-fab-button color="warning" (click)="goMap()">
       <ion-icon name="map"></ion-icon>
     </ion-fab-button>
   </ion-fab>
