--- a/src/app/features/home/containers/map-place-modal/map-place-modal.component.html
+++ b/src/app/features/home/containers/map-place-modal/map-place-modal.component.html
@@ -10,5 +10,5 @@
 </ion-header>
 
 <ion-content padding>
-  <app-map></app-map>
+  <app-map  *ngIf="(coords$|async) as coords" [coords]="coords"></app-map>
 </ion-content>
