--- a/client/src/app/features/profile/containers/profile/profile.component.html
+++ b/client/src/app/features/profile/containers/profile/profile.component.html
@@ -14,18 +14,22 @@
 <ion-content>
   
 
-    <ion-list>
-      <ion-item>
-        <ion-label position="floating">Username</ion-label>
-        <ion-input></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="floating">Password</ion-label>
-        <ion-input></ion-input>
-      </ion-item>
-    </ion-list>
-    <p>
-      <ion-button expand="full" shape="round">Submit</ion-button>
-    </p>
+  <div class="container">
+    <form (submit)="register()">
+      <div class="form-group">
+        <label for="name">Full name</label>
+        <input type="text" class="form-control" name="name" placeholder="Enter your name" [(ngModel)]="credentials.name">
+      </div>
+      <div class="form-group">
+        <label for="email">Email address</label>
+        <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="credentials.email">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="credentials.password">
+      </div>
+      <button type="submit" class="btn btn-primary">Register!</button>
+    </form>
+  </div>
   
 </ion-content>
