--- a/client/src/app/features/profile/containers/profile/profile.component.html
+++ b/client/src/app/features/profile/containers/profile/profile.component.html
@@ -1,35 +1,27 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-menu-toggle>
-        <ion-button>
-          <ion-icon slot="icon-only" name="menu"></ion-icon>
-        </ion-button>
-      </ion-menu-toggle>
-    </ion-buttons>
-    <ion-title>Profile</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+        <ion-menu-toggle>
+          <ion-button (click)="dismiss()">
+            <ion-icon slot="icon-only" name="menu"></ion-icon>
+          </ion-button>
+        </ion-menu-toggle>
+      </ion-buttons>
+      <ion-title>Profile</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-<ion-content>
-  
+  <ion-content>
 
-  <div class="container">
-    <form (submit)="register()">
-      <div class="form-group">
-        <label for="name">Full name</label>
-        <input type="text" class="form-control" name="name" placeholder="Enter your name" [(ngModel)]="credentials.name">
-      </div>
-      <div class="form-group">
-        <label for="email">Email address</label>
-        <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="credentials.email">
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="credentials.password">
-      </div>
-      <button type="submit" class="btn btn-primary">Register!</button>
-    </form>
-  </div>
-  
-</ion-content>
+      <ion-item>
+          <ion-avatar slot="end">
+            <img src="https://images.unsplash.com/photo-1511125357779-27038c647d9d?auto=format&fit=crop&w=1951&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D">
+          </ion-avatar>
+          <ion-label>Wide Avatar</ion-label>
+        </ion-item>
+
+  </ion-content>
+
+  <ion-button (click)="goRegister()">
+      Register
+  </ion-button>
