--- a/client/src/app/features/profile/containers/login/login.component.html
+++ b/client/src/app/features/profile/containers/login/login.component.html
@@ -1,3 +1,40 @@
-<p>
-  login works!
-</p>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+        <ion-button (click)="dismiss()">
+          <ion-icon slot="icon-only" name="close"></ion-icon>
+        </ion-button>
+    </ion-buttons>
+    <ion-title>Login</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+
+  <ion-item id="custom">
+    <ion-label position="stacked">Email</ion-label>
+    <ion-input
+      id="input2"
+      type="email"
+      placeholder="Enter email"
+      value=""
+      [(ngModel)]="credentials.email">
+    </ion-input>
+  </ion-item>
+
+  <ion-item id="custom">
+    <ion-label position="stacked">Password</ion-label>
+    <ion-input
+      id="input2"
+      type="password"
+      placeholder="Enter password"
+      value=""
+      [(ngModel)]="credentials.password">
+    </ion-input>
+  </ion-item>
+
+  <ion-button expand="block" (click)="login()">
+    Login
+  </ion-button>
+
+</ion-content>
