--- a/client/src/app/features/profile/containers/profile/profile.component.html
+++ b/client/src/app/features/profile/containers/profile/profile.component.html
@@ -13,13 +13,14 @@
 </ion-header>
 
 <ion-content id="content">
+
   <ion-card *ngIf="!auth.isLoggedIn()" (click)="goLogin()">
     <ion-item>
       <ion-icon name="person" slot="start"></ion-icon>
       <ion-label>Login</ion-label>
     </ion-item>
   </ion-card>
-  <p *ngIf="auth.isLoggedIn()"><a routerLink="/profile">{{ auth.getUserDetails()?.name }}</a></p>
+  <p *ngIf="auth.isLoggedIn()">{{ auth.getUserDetails()?.name }}</p>
   <ion-button *ngIf="auth.isLoggedIn()" (click)="auth.logout()">Logout</ion-button>
 
   <ion-card *ngIf="auth.isLoggedIn()">
@@ -30,6 +31,7 @@
     <label>Email</label>
     <p>{{ details?.email }}</p>
   </ion-card>
+  
 </ion-content>
 
 
