mew model backend commit

--- a/client/src/app/features/home/containers/home/home.component.html
+++ b/client/src/app/features/home/containers/home/home.component.html
@@ -59,7 +59,7 @@
       
   <!-- fab placed to the (vertical) center and end -->
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button color="primary">
+    <ion-fab-button color="primary" (click)="goAddPost()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
