--- a/client/src/app/features/profile/containers/login/login.component.html
+++ b/client/src/app/features/profile/containers/login/login.component.html
@@ -33,7 +33,7 @@
     </ion-input>
   </ion-item>
 
-  <ion-button expand="block" (click)="login()">
+  <ion-button expand="full" (click)="login()">
     Login
   </ion-button>
 
