--- a/client/src/app/shared/components/cards/cards.component.html
+++ b/client/src/app/shared/components/cards/cards.component.html
@@ -2,9 +2,9 @@
 
 <ion-card style="color: white;">
   <div style="position: absolute; top: 0; left:0; right:0; bottom:0;">
-    <img style="transform: scale(1.2)" src="{{image}}">
+    <img style="transform: scale(1.3)" src="{{image}}">
   </div>
-  <ion-card-header translucent>
+  <ion-card-header translucent mode="ios">
     <ion-card-title>
       {{title}}
     </ion-card-title>
@@ -13,7 +13,7 @@
     </ion-card-subtitle>
   </ion-card-header>
 
-  <ion-card-content style="padding-top: 100px">
+  <ion-card-content style="padding-top: 100px; min-height: 200px">
     <!-- add text: optional-->
   </ion-card-content>
 </ion-card>
