--- a/client/src/app/features/home/containers/home/home.component.html
+++ b/client/src/app/features/home/containers/home/home.component.html
@@ -7,12 +7,12 @@
 <ion-content>
 
   <!-- searchbar -->
-  <ion-searchbar
+  <!-- <ion-searchbar
     animated="true"
     show-cancel-button
     placeholder="Chercher par localité"
     debounce="500">
-  </ion-searchbar>
+  </ion-searchbar> -->
 
   <!-- first card -->
   <!-- <ion-card style="color: white;" >
@@ -69,3 +69,4 @@
     </ion-fab-button>
   </ion-fab>
 </ion-content>
+
