--- a/client/src/app/features/profile/containers/register/register.component.html
+++ b/client/src/app/features/profile/containers/register/register.component.html
@@ -1,51 +1,51 @@
 <ion-header>
-      <ion-toolbar color="primary">
-        <ion-buttons slot="start">
-            <ion-button (click)="dismiss()">
-              <ion-icon slot="icon-only" name="close"></ion-icon>
-            </ion-button>
-        </ion-buttons>
-        <ion-title>Register</ion-title>
-      </ion-toolbar>
-    </ion-header>
-  
-  <ion-content>
-  
-      <ion-item id="custom">
-        <ion-label position="stacked">Name</ion-label>
-        <ion-input
-          id="input2"
-          type="text"
-          placeholder="Enter a name"
-          value=""
-          [(ngModel)]="credentials.name">
-        </ion-input>
-      </ion-item>
-  
-      <ion-item id="custom">
-        <ion-label position="stacked">Email</ion-label>
-        <ion-input
-          id="input2"
-          type="email"
-          placeholder="Enter email"
-          value=""
-          [(ngModel)]="credentials.email">
-        </ion-input>
-      </ion-item>
-  
-      <ion-item id="custom">
-        <ion-label position="stacked">Password</ion-label>
-        <ion-input
-          id="input2"
-          type="password"
-          placeholder="Enter password"
-          value=""
-          [(ngModel)]="credentials.password">
-        </ion-input>
-      </ion-item>
-  
-      <ion-button expand="block" (click)="register()">
-        Register
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-button (click)="dismiss()">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
-    
-  </ion-content>
+    </ion-buttons>
+    <ion-title>Register</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+
+  <ion-item id="custom">
+    <ion-label position="stacked">Name</ion-label>
+    <ion-input
+      id="input2"
+      type="text"
+      placeholder="Enter a name"
+      value=""
+      [(ngModel)]="credentials.name">
+    </ion-input>
+  </ion-item>
+
+  <ion-item id="custom">
+    <ion-label position="stacked">Email</ion-label>
+    <ion-input
+      id="input2"
+      type="email"
+      placeholder="Enter email"
+      value=""
+      [(ngModel)]="credentials.email">
+    </ion-input>
+  </ion-item>
+
+  <ion-item id="custom">
+    <ion-label position="stacked">Password</ion-label>
+    <ion-input
+      id="input2"
+      type="password"
+      placeholder="Enter password"
+      value=""
+      [(ngModel)]="credentials.password">
+    </ion-input>
+  </ion-item>
+
+  <ion-button expand="full" (click)="register()">
+    Register
+  </ion-button>
+
+</ion-content>
