--- a/client/src/app/features/profile/containers/profile/profile.component.html
+++ b/client/src/app/features/profile/containers/profile/profile.component.html
@@ -1,13 +1,5 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-buttons slot="secondary">
-      <ion-button class="closeButton" fill="clear">
-        <ion-icon slot="icon-only" name="contact"></ion-icon>
-      </ion-button>
-      <ion-button fill="solid">
-        Name
-      </ion-button>
-    </ion-buttons>
     <ion-title>Profile</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -29,7 +21,7 @@
         <ion-icon name="person" slot="start"></ion-icon>Login
     </ion-button>
     <ion-button color="primary" (click)="goRegister()">
-        <ion-icon name="add-circle" slot="start"></ion-icon>Register
+        <ion-icon name="create" slot="start"></ion-icon>Register
     </ion-button>
   </ion-card-content>
 </ion-card>
