--- a/client/src/app/features/home/containers/add-post-modal/add-post-modal.component.html
+++ b/client/src/app/features/home/containers/add-post-modal/add-post-modal.component.html
@@ -91,7 +91,24 @@
     </ion-input>
   </ion-item>
 
-  <ion-item id="custom">
+  <ion-item>
+    <ion-label>Size</ion-label>
+    <ion-select [(ngModel)]="creds.size" id="props" multiple="true" cancel-text="Nah" ok-text="Okay!">
+      <ion-select-option value="small">Small</ion-select-option>
+      <ion-select-option value="medium">Medium</ion-select-option>
+      <ion-select-option value="big">Big</ion-select-option>
+    </ion-select>
+  </ion-item>
+  <ion-item>
+    <ion-label>Disc</ion-label>
+    <ion-select [(ngModel)]="creds.disc" id="props" multiple="true" cancel-text="Nah" ok-text="Okay!">
+      <ion-select-option value="platinum">Platinum</ion-select-option>
+      <ion-select-option value="metal">Metal</ion-select-option>
+      <ion-select-option value="carbonium">Carbonium</ion-select-option>
+    </ion-select>
+  </ion-item>
+
+  <!-- <ion-item id="custom">
     <ion-label position="stacked">Size</ion-label>
     <ion-input
       id="input2"
@@ -111,7 +128,7 @@
       value=""
       [(ngModel)]="creds.disc">
     </ion-input>
-  </ion-item>
+  </ion-item> -->
 
   <ion-button expand="full" (click)="addPost()">
     Submit
