--- a/client/src/app/features/profile/containers/profile/profile.component.html
+++ b/client/src/app/features/profile/containers/profile/profile.component.html
@@ -41,6 +41,9 @@
     <ion-button color="primary" (click)="auth.logout()">
       <ion-icon name="person" slot="start"></ion-icon>Logout
     </ion-button>
+    <ion-button color="primary">
+      <ion-icon name="settings" slot="start"></ion-icon>Settings
+    </ion-button>
   </ion-card-content>
 </ion-card>
 <!-- end of logout card -->
