--- a/client/src/app/features/home/containers/add-post-modal/add-post-modal.component.html
+++ b/client/src/app/features/home/containers/add-post-modal/add-post-modal.component.html
@@ -33,7 +33,7 @@
   </ion-item>
 
   <ion-item id="custom">
-    <ion-label position="stacked">Type</ion-label>
+    <ion-label position="stacked">Type of bike</ion-label>
     <ion-input
       id="input2"
       type="text"
@@ -44,7 +44,7 @@
   </ion-item>
   
   <ion-item id="custom">
-    <ion-label position="stacked">Type</ion-label>
+    <ion-label position="stacked">Type of skis</ion-label>
     <ion-input
       id="input2"
       type="text"
