--- a/client/src/app/features/home/containers/add-post-modal/add-post-modal.component.html
+++ b/client/src/app/features/home/containers/add-post-modal/add-post-modal.component.html
@@ -37,18 +37,7 @@
     <ion-input
       id="input2"
       type="text"
-      placeholder="Ex: VTT, VTC"
-      value=""
-      [(ngModel)]="creds.type">
-    </ion-input>
-  </ion-item>
-  
-  <ion-item id="custom">
-    <ion-label position="stacked">Type of skis</ion-label>
-    <ion-input
-      id="input2"
-      type="text"
-      placeholder="Ex: Alpin, Piste"
+      placeholder="Ex: VTT, VTC, Alpin, Piste"
       value=""
       [(ngModel)]="creds.type">
     </ion-input>
